kubernetes/golden-path-app.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: platform-demo
  labels:
    owner: app-team
    cost-control: validation
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: golden-path-api
  namespace: platform-demo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: golden-path-api
  template:
    metadata:
      labels:
        app: golden-path-api
    spec:
      containers:
        - name: api
          image: ghcr.io/alexcgodwin/golden-path-api:latest
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: golden-path-api
  namespace: platform-demo
spec:
  type: ClusterIP
  selector:
    app: golden-path-api
  ports:
    - name: http
      port: 80
      targetPort: 8080
