kubernetes/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress
  namespace: platform-demo
spec:
  podSelector: {}
  policyTypes:
    - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-api-ingress
  namespace: platform-demo
spec:
  podSelector:
    matchLabels:
      app: golden-path-api
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              access: platform-ingress
  policyTypes:
    - Ingress
